DPO-2816 deprekoitumisia sun muita korjauksia (#157)
* DPO-2816 fix deprecations and other problems

* DPO-2816 revert some fixes